# gxwf-web

./: .coveragerc  .gitignore  .pre-commit-config.yaml.sample  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.md  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: ci.yml
docs/: Makefile  api.md  architecture.md  cli.md  cli.rst  conf.py  contents_api.md  developing.md  developing.rst  index.md  index.rst  installation.md  installation.rst  requirements.txt  workflow_ops.md
docs/_static/: openapi.json
scripts/: copy_ui.py  run-e2e.sh
src/galaxy_workflow_dev_webapp/: __main__.py  app.py  contents.py  models.py  operations.py  project.py
src/gxwf_web/: __main__.py  app.py  csp.py  models.py  operations.py
tests/: test_api.py  test_contents.py  test_csp.py
