[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gxwf-web"
dynamic = ["version"]
description = "FastAPI service for Galaxy workflow validation, linting, cleaning, and format conversion"
readme = "README.md"
authors = [
    {name = "Galaxy Project and Community", email = "jmchilton@gmail.com"},
]
license = "MIT"
license-files = [
    "LICENSE",
]
keywords = ["galaxy", "workflows"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Testing",
]
requires-python = ">=3.10"
dependencies = [
    "galaxy-tool-util==25.1.dev0",
    "galaxy-tool-util-models==25.1.dev0",
    "galaxy-util==25.1.dev0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.0",
    "gxformat2>=0.24.0",
    "jsonschema>=4.26.0",
]

[project.scripts]
gxwf-web = "gxwf_web.__main__:main"

[project.urls]
Homepage = "https://github.com/jmchilton/gxwf-web"

[dependency-groups]
lint = [
    "ruff",
    "black",
    "isort",
]
mypy = [
    "mypy",
    "types-PyYAML",
    "types-requests",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]
docs = [
    "sphinx",
    "pydata-sphinx-theme",
    "myst-parser",
    "sphinx-argparse",
    "sphinx-design",
    "sphinxcontrib-mermaid",
    "sphinxcontrib-openapi",
]

[tool.setuptools.dynamic]
version = {attr = "gxwf_web.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["gxwf_web*"]

[tool.ruff]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["gxwf_web"]
force_alphabetical_sort_within_sections = true

[tool.black]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.sources]
galaxy-tool-util = { path = "/Users/jxc755/projects/worktrees/galaxy/branch/wf_tool_state/packages/tool_util", editable = true }
galaxy-tool-util-models = { path = "/Users/jxc755/projects/worktrees/galaxy/branch/wf_tool_state/packages/tool_util_models", editable = true }
galaxy-util = { path = "/Users/jxc755/projects/worktrees/galaxy/branch/wf_tool_state/packages/util", editable = true }
gxformat2 = { path = "/Users/jxc755/projects/worktrees/gxformat2/branch/abstraction_applications", editable = true }
